<resources>
    <string name="app_name">CowboyFriend</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_cow">New cow</string>
    <string name="cattle_tour">Cattle Tour</string>
    <string name="settings">Settings</string>
    <string name="number_cow">Number of cow</string>
    <string name="gender_cow">Gender of cow</string>
    <string name="number_of_mom">Number of mom</string>
    <string name="take_picture">Take a picture</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_cow_number">number of cow: %1$s</string>
    <string name="title_mom_number">number of mom: %1$s</string>
    <string name="title_cow_gender">gender of cow: %1$s</string>
    <string name="title_comment">comment: %1$s</string>
    <string name="title_last_date_location">last date location: %1$s</string>
    <string name="mapbox_access_token" translatable="false">pk.eyJ1IjoidG9tZXJjaG9lbiIsImEiOiJja2psYWJ0M201N3ZuMnJucW4zNWZqYzNvIn0.fZ3nmtGLC2X-PKfuNY5wfQ</string>
    <string name="map_title">Map</string>
    <string name="comments">Comments</string>
    <string name="no_comment">no comment</string>
    <string name="location_latitude">latitude</string>
    <string name="location_longtitude">longtitude</string>
    <string name="save_location">save location</string>
    <string name="load">load</string>
    <string name="corpse">corpse</string>
    <string name="save">save</string>
    <string name="seen_today">Seen today</string>
    <string name="title_last_seen">last seen: %1$s</string>
    <string name="last_not_seen">not seen recently</string>
    <string name="cow_details">cow details</string>
    <string name="no_corpse">no corpse</string>
    <string name="user">user</string>
    <string name="password">password</string>
    <string name="connect">connect</string>
    <string name="login">login</string>
    <string name="success_login">success login</string>
    <string name="load_my_location">load my location…</string>
    <string name="connect_to_account">connect to your account</string>
    <string name="cow_type">type of cow</string>
    <string name="with_mom">with mom</string>
    <string name="description" translatable="false">description</string>
    <string name="error">Error</string>
    <string name="save_file_success">File save was successful</string>
    <string name="save_file_failed">Failed to save file</string>
    <string name="no_photo">no photo</string>
    <string name="mom_number_not_found">This mom number does not exist in the list</string>
    <string name="select_mom_placeholder">Select</string>
    <string name="number_of_calvings">Number of calvings</string>
    <string name="gender_not_found">This value does not exist in the list</string>
    <string name="next_cow_type">Next cow type</string>
    <string name="prev_cow_type">Previous cow type</string>
    <string name="share_title">Send video from Cow Friend</string>
    <string name="see_mother">You can see his mother</string>
    <string name="marked_tag">marked with an ear tag</string>


    <string-array name="cow_type">
        <item>calf</item>
        <item>first-cow</item>
        <item>cow</item>
        <item>bull</item>
    </string-array>

    <string-array name="gender_options">
        <item>Select</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <!-- Location status next to the save location button -->
    <string name="location_saved">location saved</string>
    <string name="location_not_saved">location not saved</string>
    <!-- In-app voice input dialog -->
    <string name="voice_listening">Listening…</string>
    <string name="voice_hearing">Hearing you…</string>
    <string name="voice_retry">Could not hear you, try again</string>
    <string name="voice_cancel">Cancel</string>
    <string name="voice_error">Voice recognition failed</string>
    <string name="voice_permission_denied">Microphone permission is required</string>
    <!-- Spoken prompts of the voice buttons -->
    <string name="voice_prompt_cow_number">Choose the cow number</string>
    <string name="voice_prompt_cow_gender">Choose the cow gender</string>
    <string name="voice_prompt_mom_number">Choose the mother number</string>
    <string name="voice_prompt_calvings_number">Choose the number of calvings</string>
    <string name="voice_prompt_comment">Comment</string>
    <!-- Error shown when a recognized value for a number field is not a number -->
    <string name="field_must_be_number">The value of this field must be a number</string>
    <!-- Saving overlay text and the save result messages -->
    <string name="saving_cow">Saving the cow…</string>
    <string name="cow_saved">Cow saved successfully</string>
    <string name="cow_save_failed">Saving failed, please try again</string>
</resources>