<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:background="@color/common_google_signin_btn_text_dark_disabled"
    android:weightSum="6"
    android:id="@+id/llContainer">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:orientation="vertical"
        android:gravity="center"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginBottom="25dp"
            android:orientation="horizontal">
        <Spinner
            android:id="@+id/spCowType"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:entries="@array/cow_type"
            android:layout_marginBottom="25dp"
            android:background="@drawable/shape_bg_subjects_spinner"
            android:spinnerMode="dropdown"
            tools:listitem="@layout/support_simple_spinner_dropdown_item"
            android:theme="@style/spinnerTheme"
            android:popupBackground="@drawable/shape_bg_subjects_spinner"
            />
            <ImageView
                android:layout_gravity="center_vertical"
                android:id="@+id/ivSaveCowType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:contentDescription="@string/cow_details"
                android:src="@drawable/save3"
                />
    </LinearLayout>
        <ImageView
            android:layout_marginStart="16dp"
            android:id="@+id/ivCowImg"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2.5"
        android:orientation="vertical"
        android:gravity="center"
        >
        <TextView
            android:id="@+id/tvCowNum"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/tvMonNum"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"/>
        <TextView
            android:id="@+id/tvGender"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/tvLastDateLocation"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical"
        android:gravity="start"
        >
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            >

            <Button
                android:id="@+id/btnSaveLastSeen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textSize="10sp"
                android:text="@string/seen_today"
                />
            <CheckBox
                android:layout_marginStart="5dp"
                android:id="@+id/cbWithMom"
                android:textColor="@color/black"
                android:layout_gravity="end"
                android:text="@string/with_mom"
                android:textSize="10sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:buttonTint="@color/black"
                />
        </FrameLayout>
        <TextView
            android:id="@+id/tvLastSeen"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            >
        <CheckBox
            android:id="@+id/cbCorpse"
            android:textColor="@color/black"
            android:text="@string/corpse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
            <ImageView
                android:layout_gravity="center_vertical"
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:src="@drawable/save3"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/tvComment"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"/>

    </LinearLayout>
</LinearLayout>