<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg_login">

    <ProgressBar
        android:id="@+id/pbLogin"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:indeterminateTint="@color/black"
        />

<!--    <androidx.appcompat.widget.AppCompatImageView-->
<!--        android:id="@+id/ivLogo"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="center"-->
<!--        android:background="@color/transparent"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.080"-->
<!--        app:srcCompat="@drawable/choobudo_login_logo" />-->

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.158" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/user"
        android:textColor="@color/grey1"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/etUsername"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.235" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etUsername"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/shape_field_unfill"
        android:paddingStart="10dp"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.276"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.060"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.75"
        tools:ignore="RtlSymmetry"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/password"
        android:textColor="@color/grey1"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/etUsername"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.355"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/shape_field_unfill"
        android:paddingStart="10dp"
        android:inputType="textPassword"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.060"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.75"
        app:layout_constraintVertical_bias="0.402"
        tools:ignore="RtlSymmetry"
        />

<!--    <androidx.appcompat.widget.AppCompatTextView-->
<!--        android:id = "@+id/tvForgetPassword"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="center"-->
<!--        android:text="@string/forgot_user"-->
<!--        android:textColor="@color/grey1"-->
<!--        android:textSize="12sp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="@+id/etUsername"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        android:clickable="true"-->
<!--        android:focusable="true"-->
<!--        app:layout_constraintVertical_bias="0.468"-->
<!--        />-->

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.557">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:clickable="true"
            android:enabled="false"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/button_connect" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvConnection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/connect"
            android:textColor="@color/white"
            android:textSize="16sp" />


    </FrameLayout>

<!--    <FrameLayout-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.6"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.650">-->

<!--        <androidx.appcompat.widget.AppCompatTextView-->
<!--            android:id="@+id/tvError"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center"-->
<!--            android:layout_marginTop="6dp"-->
<!--            android:textColor="@color/black"-->
<!--            android:textSize="16sp"-->
<!--            android:visibility="gone"-->
<!--            />-->

<!--        <androidx.appcompat.widget.AppCompatImageView-->
<!--            android:id="@+id/ivRegistration"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center"-->
<!--            android:background="@color/transparent"-->
<!--            android:clickable="true"-->
<!--            android:focusable="true"-->
<!--            app:srcCompat="@drawable/button_start" />-->

<!--        <androidx.appcompat.widget.AppCompatTextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center"-->
<!--            android:text="@string/start"-->
<!--            android:textColor="@color/white"-->
<!--            android:textSize="16sp" />-->
<!--    </FrameLayout>-->

<!--    <View-->
<!--        android:id="@+id/vEnd"-->
<!--        android:layout_width="98dp"-->
<!--        android:layout_height="0.8dp"-->
<!--        android:layout_marginEnd="17dp"-->
<!--        android:background="@drawable/end_view"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        android:visibility="gone"-->
<!--        app:layout_constraintVertical_bias="0.715"-->
<!--        />-->

<!--    <View-->
<!--        android:layout_width="98dp"-->
<!--        android:layout_height="0.8dp"-->
<!--        android:layout_marginStart="17dp"-->
<!--        android:background="@drawable/start_view"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        android:visibility="gone"-->
<!--        app:layout_constraintVertical_bias="0.715"-->
<!--        />-->

<!--    <androidx.appcompat.widget.AppCompatTextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="center"-->
<!--        android:text="@string/continue_by"-->
<!--        android:textColor="@color/grey2"-->
<!--        android:textSize="12sp"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/vEnd"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        android:visibility="gone"-->
<!--        app:layout_constraintTop_toTopOf="@+id/vEnd"-->
<!--        />-->

<!--    <androidx.appcompat.widget.AppCompatImageView-->
<!--        android:id="@+id/ivLoginFacebook"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="center"-->
<!--        android:background="@color/transparent"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.170"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.801"-->
<!--        android:visibility="gone"-->
<!--        app:srcCompat="@drawable/login_facebook"-->
<!--        />-->

<!--    <androidx.appcompat.widget.AppCompatImageView-->
<!--        android:id="@+id/ivLoginGoogle"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="center"-->
<!--        android:background="@color/transparent"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.825"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.801"-->
<!--        android:visibility="gone"-->
<!--        app:srcCompat="@drawable/login_google"-->
<!--        />-->

</androidx.constraintlayout.widget.ConstraintLayout>